[package]
name = "pktparse"
version = "0.5.0"
authors = ["Antoine Plaskowski", "Nathan Moos", "Xavier Bestel"]
description = "Collection of packet parsers"
repository = "https://github.com/bestouff/pktparse-rs"
readme = "README.md"
license = "LGPL-3.0"
edition = "2018"

[dependencies]
nom = "5.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
