[package]
name = "pktparse"
version = "0.7.0"
authors = ["Antoine Plaskowski", "Nathan Moos", "Xavier Bestel"]
description = "Collection of packet parsers"
repository = "https://github.com/bestouff/pktparse-rs"
readme = "README.md"
license = "LGPL-3.0"
edition = "2018"
keywords = ["network", "packet", "parsing", "nom", "library"]
categories = ["encoding", "network-programming", "parser-implementations"]

[dependencies]
nom = "7"
serde = { version = "1.0", optional = true, features = ["derive"] }
